--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,8 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.android.sapo.app.DetailActivity.DetailFragment">
 
+    <ListView
+        android:id="@+id/listview_categorias"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+<!--
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:id="@+id/detail_text"
         android:layout_height="wrap_content" />
-
+-->
 </RelativeLayout>
