--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container_detail"
+    android:id="@+id/container_categorias"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.sapo.app.DetailActivity"
+    tools:context="com.example.android.sapo.app.CategoriasActivity"
     tools:ignore="MergeRootFrame"
     />
