--- a/app/src/main/res/layout/fragment_categorias.xml
+++ b/app/src/main/res/layout/fragment_categorias.xml
@@ -4,15 +4,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sapo.app.DetailActivity.DetailFragment">
+    tools:context="com.example.android.sapo.app.CategoriasActivity.DetailFragment">
 
     <ListView
         android:id="@+id/listview_categorias"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-<!--
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:id="@+id/detail_text"
-        android:layout_height="wrap_content" />
--->
+
 </RelativeLayout>
