--- a/app/src/main/res/layout/fragment_tiendas.xml
+++ b/app/src/main/res/layout/fragment_tiendas.xml
@@ -10,7 +10,7 @@
     tools:context=".MainActivity$ForecastFragment">
 
     <ListView
-        android:id="@+id/listview_forecast"
+        android:id="@+id/listview_tiendas"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
