--- a/app/src/main/res/layout/list_item_tiendas.xml
+++ b/app/src/main/res/layout/list_item_tiendas.xml
@@ -5,4 +5,4 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:id="@+id/list_item_textview" />
+    android:id="@+id/list_item_tienda" />
