--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -6,10 +6,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sapo.app.CategoriasActivity">
+    tools:context="com.example.android.sapo.app.ProductosActivity">
 
     <ListView
-        android:id="@+id/listview_categorias"
+        android:id="@+id/listview_productos"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
