--- a/app/src/main/res/layout/list_item_productos.xml
+++ b/app/src/main/res/layout/list_item_productos.xml
@@ -3,4 +3,4 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:id="@+id/list_item_tienda" />
+    android:id="@+id/list_item_producto" />
