--- a/app/src/main/res/layout/fragment_tiendas.xml
+++ b/app/src/main/res/layout/fragment_tiendas.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sapo.app.TiendasActivity">
+    tools:context="com.example.android.sapo.app.AlmacenActivity">
 
     <ListView
         android:id="@+id/listview_tiendas"
