--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sapo.app.LoginActivity">
+    tools:context="com.example.android.sapo.app.AlmacenActivity">
 
     <LinearLayout
         android:id="@+id/email_login_form"
